--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,13 @@
 {
     "name": "multiplayer/lobby",
-    "description": "Multiplayer game lobby system with WebSocket support",
+    "description": "Multiplayer game lobby system with HTTP polling",
     "type": "project",
     "require": {
-        "php": ">=8.1",
-        "cboden/ratchet": "^0.4.4",
-        "react/event-loop": "^1.4"
+        "php": ">=8.1"
     },
     "autoload": {
         "psr-4": {
             "App\\": "backend/"
         }
-    },
-    "scripts": {
-        "start-websocket": "php backend/server.php"
     }
 }
