--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,18 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "lib": ["ES2020", "DOM"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "strict": true,
     "noEmitOnError": true,
     "skipLibCheck": true,
-    "outDir": "app/js-out",
-    "rootDir": "app/js",
+    "outDir": "dist",
+    "rootDir": ".",
     "moduleResolution": "bundler",
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "jsx": "react-jsx",
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
+    "isolatedModules": true
   },
-  "include": ["app/js/**/*.ts"]
+  "include": ["app/js/**/*.ts", "app/js/**/*.tsx", "vite-env.d.ts"]
 }
