--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "pixi.js": "^8.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
