--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "watch": "vite build --watch",
     "build": "vite build",
     "preview": "vite preview",
-    "php": "nodemon --watch backend --watch index.php --ext php --exec \"php -S localhost:8000 index.php\""
+    "php": "nodemon --watch backend --watch index.php --ext php --exec \"php -S localhost:8000 index.php\"",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@types/react": "^19.0.10",
@@ -24,6 +26,7 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vitest": "^2.1.0"
   }
 }
